Changes between nazghul-0.1.4 and nazghul-0.1.5

o Bugfix: with animation off, on entry to wilderness combat the map was not
  being updated properly. (Thanks to Sam for finding this).

o Bugfix: with animation off, in Character Mode, if the current character quits
  the game then in some cases the game will not quit, and will prompt the
  player to move the next character, until the turn is over.

o Bugfix: with animation off, after fleeing from wilderness combat the screen
  remained blank until the user pressed a key to cause a map repaint. (Thanks
  to Sam for finding this).

o Bugfix: with animation off, npc's sometimes appeared to "jump" a
  space. Needed to add conditional repaints of the map before prompting the
  user for input, this way the user is always looking at an up-to-date map when
  they decide what to do next.

Changes between nazghul-0.1.4 and nazghul0.1.3

o Towns now work like dungeons and combat, as opposed to working like the
  wilderness. This means that instead of seeing a single icon represent the
  party in town you will see each party member. Follow, Solo and Round-Robin
  modes all work as you would expect.

o Fixed the problems with compiling on recent versions of gcc.

o Minor tweeks to the main map.

Changes between nazghul-0.1.2 and nazghul-0.1.3

sglasby:

o [daghul]
  new spell "IN BET LOR", part of a set of new spells planned for the initial
  (example) game.

o [daghul]
  new armor types

o [engine]
  several UI changes pertaining to weapon prompts in combat mode.

o [engine]
  New command '@' (AT) which displays contextual information about the party
  (or current character)'s location, etc.

sglasby and gmcnutt:

o [both]
  Weapons and armor and such are now defined with more information, on
  topics such as their attack/defense values, damage and armor value
  ranges.  The basic combat rule is 
      attack  = 2d6 roll + attack value
      defense = 2d6 roll + defense value