@@ -16,8 +16,7 @@ The sounds were obtained from some forgotten site somewhere that did not report
 any copying information. Unfortunately I don't know who created them so I can't
 give proper credit.
 
-The ghulscript files found in the test and example directories are released to
+The Scheme files found in the test and world directories are released to
 the public domain.
 
 Copying, modifying, bundling, and burning to new ROMs is encouraged!
-
