@@ -20,7 +20,6 @@
 //
 
 #include "cmd.h"
-#include "game.h"
 #include "place.h"
 #include "constants.h"
 #include "images.h"
